--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- <link href = "fonts/ArTarumianKamar/stylesheet.css" rel = "stylesheet" type = "text/css" /> -->
     <link href = "fonts/Klein-Light/style.css" rel = "stylesheet" type = "text/css" />
     <link rel="preload" href="fonts/Klein-Light/Klein-Light.woff2" as="font" type="font/woff2" crossorigin>
-    <link href="/Assets\fontawesome/css/all.css" rel="stylesheet">
+    <link href="Assets\fontawesome/css/all.css" rel="stylesheet">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap');
         </style>
